# exercise-recognition

./: .gitignore  README.md  pyproject.toml
demo/app/: package.json
demo/app/src/: App.jsx  index.css
demo/app/src/components/: Information.jsx  Repetition.jsx
demo/server/: index.js
model/: convert.py  test.py  train.py
results/: train_history
src/: convert.py  convert_to_header.py  features.py  load_custom_dataset.py  load_dataset.py
src/collection/: collection.ino  convert_to_header.py
src/conversion/: convert_to_header.py  convert_to_tflite.py
src/dataset/: download_dataset.py  load_custom_dataset.py  load_dataset.py
src/demo/app/: package-lock.json
src/demo/app/src/: App.jsx
src/demo/app/src/components/: Information.jsx  Repetition.jsx
src/demo/server/: index.js
src/inference/: inference.ino  model.cpp
src/model/: plots.py  predict.py  train.py
src/server/: index.js  package-lock.json  package.json
src/website/app/: package-lock.json  package.json
src/website/app/src/: App.jsx  index.css  socket.js
src/website/app/src/components/: BarChart.jsx  Card.jsx  Information.jsx  RepetitionCount.jsx
src/website/server/: index.js  package-lock.json  package.json
train/: train.py
